Bug 437153 - filenamesearch crashes in KCoreDirLister
Summary: filenamesearch crashes in KCoreDirLister
Status: RESOLVED FIXED
Alias: None
Product: frameworks-kio
Classification: Frameworks and Libraries
Component: general (other bugs)
Version First Reported In: git master
Platform: Other Linux
: NOR crash
Target Milestone: ---
Assignee: KIO Bugs
URL:
Keywords:
: 437136 437274 437393 437438 441787 443367 (view as bug list)
Depends on:
Blocks:
 
Reported: 2021-05-15 13:27 UTC by Kai Uwe Broulik
Modified: 2021-10-06 19:41 UTC (History)
14 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.83
Sentry Crash Report:


Attachments
error in dolphin (80.70 KB, image/png)
2021-08-16 15:38 UTC, Christian Bueno
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Kai Uwe Broulik 2021-05-15 13:27:14 UTC
SUMMARY
Filenamesearch crashes in KCoreDirListerCache::slotResult

STEPS TO REPRODUCE
1. Open a folder that is not indexed by Baloo in Dolphin
2. Launch search (Ctrl+F)

OBSERVED RESULT
Crashes

Thread 1 (Thread 0x7faa5f615040 (LWP 415051)):
[KCrash Handler]
#4  0x00007faa6417e0ee in KCoreDirListerCache::slotResult (this=0x7faa641f14a0 <(anonymous namespace)::Q_QGS_kDirListerCache::innerFunction()::holder>, j=<optimized out>) at /home/kaiuwe/Projekte/kf5/kio/src/core/kcoredirlister.cpp:1291
#5  0x00007faa63cf26fe in QtPrivate::QSlotObjectBase::call (a=0x7fff791c6e00, r=0x7faa641f14a0 <(anonymous namespace)::Q_QGS_kDirListerCache::innerFunction()::holder>, this=0x565201a06050) at ../../include/QtCore/../../src/corelib/kernel/qobjectdefs_impl.h:398
#6  doActivate<false> (sender=0x5652019f5730, signal_index=6, argv=0x7fff791c6e00) at kernel/qobject.cpp:3886
#7  0x00007faa63cebac7 in QMetaObject::activate (sender=sender@entry=0x5652019f5730, m=m@entry=0x7faa64010560 <KJob::staticMetaObject>, local_signal_index=local_signal_index@entry=3, argv=argv@entry=0x7fff791c6e00) at kernel/qobject.cpp:3946
#8  0x00007faa63fa9530 in KJob::result (this=this@entry=0x5652019f5730, _t1=<optimized out>, _t1@entry=0x5652019f5730, _t2=...) at ./obj-x86_64-linux-gnu/src/lib/KF5CoreAddons_autogen/include/moc_kjob.cpp:636
#9  0x00007faa63faa25b in KJob::finishJob (this=0x5652019f5730, emitResult=<optimized out>) at ./src/lib/jobs/kjob.cpp:94
#10 0x00007faa63faa33a in KJob::emitResult (this=<optimized out>) at ./src/lib/jobs/kjob.cpp:307
#11 0x00007faa641239a8 in KIO::SimpleJob::slotFinished (this=this@entry=0x5652019f5730) at /home/kaiuwe/Projekte/kf5/kio/src/core/simplejob.cpp:226
#12 0x00007faa64119e3e in KIO::ListJob::slotFinished (this=0x5652019f5730) at /home/kaiuwe/Projekte/kf5/kio/src/core/listjob.cpp:234
#13 0x00007faa64121bf0 in KIO::SimpleJob::slotError (this=0x5652019f5730, err=<optimized out>, errorText=...) at /home/kaiuwe/Projekte/kf5/kio/src/core/simplejob.cpp:239
#14 0x00007faa63cf26fe in QtPrivate::QSlotObjectBase::call (a=0x7fff791c70a0, r=0x5652019f5730, this=0x565201a3a510) at ../../include/QtCore/../../src/corelib/kernel/qobjectdefs_impl.h:398
#15 doActivate<false> (sender=0x5652019f2710, signal_index=5, argv=0x7fff791c70a0) at kernel/qobject.cpp:3886
#16 0x00007faa63cebac7 in QMetaObject::activate (sender=sender@entry=0x5652019f2710, m=m@entry=0x7faa641eae80 <KIO::SlaveInterface::staticMetaObject>, local_signal_index=local_signal_index@entry=2, argv=argv@entry=0x7fff791c70a0) at kernel/qobject.cpp:3946
#17 0x00007faa640f08ba in KIO::SlaveInterface::error (this=this@entry=0x5652019f2710, _t1=<optimized out>, _t2=...) at /home/kaiuwe/Projekte/kf5/kio/build/src/core/KF5KIOCore_autogen/include/moc_slaveinterface.cpp:452
#18 0x00007faa640f33d6 in KIO::SlaveInterface::dispatch (this=0x5652019f2710, _cmd=<optimized out>, rawdata=...) at /home/kaiuwe/Projekte/kf5/kio/src/core/slaveinterface.cpp:181
#19 0x00007faa640f107f in KIO::SlaveInterface::dispatch (this=0x5652019f2710) at /home/kaiuwe/Projekte/kf5/kio/src/core/slaveinterface.cpp:78
#20 0x00007faa640fa172 in KIO::Slave::gotInput (this=0x5652019f2710) at /home/kaiuwe/Projekte/kf5/kio/src/core/slave.cpp:392

EXPECTED RESULT
Does not crash

SOFTWARE/OS VERSIONS
Linux/KDE Plasma: git master as of 2021-05-21

ADDITIONAL INFORMATION
Offending line is job->uiDelegate()->showErrorMessage();
Comment 1 Bug Janitor Service 2021-05-18 17:55:58 UTC
A possibly relevant merge request was started @ https://invent.kde.org/frameworks/kio/-/merge_requests/453
Comment 2 Nate Graham 2021-05-18 21:59:45 UTC
*** Bug 437136 has been marked as a duplicate of this bug. ***
Comment 3 Nate Graham 2021-05-19 02:19:42 UTC
*** Bug 437274 has been marked as a duplicate of this bug. ***
Comment 4 Nate Graham 2021-05-20 17:21:44 UTC
*** Bug 437393 has been marked as a duplicate of this bug. ***
Comment 5 Kai Uwe Broulik 2021-05-21 07:41:26 UTC
*** Bug 437438 has been marked as a duplicate of this bug. ***
Comment 6 Ahmad Samir 2021-05-24 19:16:27 UTC
Git commit a38fcf356de0cbba1ce97c8ef70979ed897a8094 by Ahmad Samir, on behalf of Kai Uwe Broulik.
Committed on 24/05/2021 at 19:16.
Pushed by ahmadsamir into branch 'master'.

[KCoreDirLister] Guard uiDelegate(), it might be null

M  +3    -1    src/core/kcoredirlister.cpp

https://invent.kde.org/frameworks/kio/commit/a38fcf356de0cbba1ce97c8ef70979ed897a8094
Comment 7 Filip Fila 2021-06-24 17:14:42 UTC
I'm using Frameworks 5.83 and I still get "The process for the filename search protocol died unexpectedly" error when trying to search in Dolphin.
Comment 8 postix 2021-06-24 17:29:31 UTC
(In reply to Filip Fila from comment #7)
> I'm using Frameworks 5.83 and I still get "The process for the filename
> search protocol died unexpectedly" error when trying to search in Dolphin.

Do you have a complete stacktrace? For me it's fixed on openSUSE TW, Frameworks 5.83.
Comment 9 Filip Fila 2021-06-24 17:43:29 UTC
(In reply to postix from comment #8)
> (In reply to Filip Fila from comment #7)
> > I'm using Frameworks 5.83 and I still get "The process for the filename
> > search protocol died unexpectedly" error when trying to search in Dolphin.
> 
> Do you have a complete stacktrace? For me it's fixed on openSUSE TW,
> Frameworks 5.83.

This is Manjaro so I don't have debug symbols. I'm running 5.83.0 with Baloo completely disabled.
Comment 10 AndreasJ 2021-06-25 19:15:11 UTC
Same issue here. Gentoo. 
Tested w/ kde-frameworks-5.82 / -5.83 / -live (as of 21.06.2021).
Keywordfiles from
https://gitweb.gentoo.org/proj/kde.git/tree/Documentation/package.accept_keywords
Reverted back to 5.82.
Let me know if you want me to test anything.
Comment 11 AndreasJ 2021-06-25 20:55:58 UTC
Installed 5.83 again.
Result of Dolphin filesearch:
---
Application: kdeinit5 (kdeinit5), signal: Aborted

[KCrash Handler]
#4  0x00007f482cbb7b31 in raise () from /lib64/libc.so.6
#5  0x00007f482cba1536 in abort () from /lib64/libc.so.6
#6  0x00007f482cdcece3 in qt_message_fatal (message=<synthetic pointer>..., context=...) at /var/tmp/portage/dev-qt/qtcore-5.15.2-r2/work/qtbase-everywhere-src-5.15.2/src/corelib/global/qlogging.cpp:1914
#7  QMessageLogger::fatal (this=this@entry=0x7ffde132f410, msg=msg@entry=0x7f4828bd3378 "QWidget: Cannot create a QWidget without QApplication") at /var/tmp/portage/dev-qt/qtcore-5.15.2-r2/work/qtbase-everywhere-src-5.15.2/src/corelib/global/qlogging.cpp:893
#8  0x00007f48287f8cda in QWidgetPrivate::init (this=0x5625b2a5ff40, parentWidget=0x0, f=...) at /var/tmp/portage/dev-qt/qtwidgets-5.15.2/work/qtbase-everywhere-src-5.15.2/src/widgets/kernel/qwidget.cpp:981
#9  0x00007f4828a1901f in QDialog::QDialog (this=0x5625b2a9c5f0, parent=0x0, f=...) at /var/tmp/portage/dev-qt/qtwidgets-5.15.2/work/qtbase-everywhere-src-5.15.2/src/widgets/dialogs/qdialog.cpp:400
#10 0x00007f4828e336ff in KMessageBox::messageBox (parent=0x0, type=KMessageBox::Error, text=..., caption=..., buttonYes=..., buttonNo=..., buttonCancel=..., dontShow=..., options=...) at /var/tmp/portage/kde-frameworks/kwidgetsaddons-5.83.0/work/kwidgetsaddons-5.83.0/src/kmessagebox.cpp:1033
#11 0x00007f4828ed90fa in KDialogJobUiDelegatePrivate::next (this=0x5625b2a4f500) at /var/tmp/portage/kde-frameworks/kjobwidgets-5.83.0/work/kjobwidgets-5.83.0/src/kdialogjobuidelegate.cpp:73
#12 0x00007f482cfeccfa in QObject::event (this=0x5625b2a4f500, e=0x5625b2a76b00) at /var/tmp/portage/dev-qt/qtcore-5.15.2-r2/work/qtbase-everywhere-src-5.15.2/src/corelib/kernel/qobject.cpp:1314
#13 0x00007f482cfc0f65 in doNotify (event=0x5625b2a76b00, receiver=0x5625b2a4f500) at /var/tmp/portage/dev-qt/qtcore-5.15.2-r2/work/qtbase-everywhere-src-5.15.2/src/corelib/kernel/qcoreapplication.cpp:1153
#14 QCoreApplication::notify (event=<optimized out>, receiver=<optimized out>, this=<optimized out>) at /var/tmp/portage/dev-qt/qtcore-5.15.2-r2/work/qtbase-everywhere-src-5.15.2/src/corelib/kernel/qcoreapplication.cpp:1139
#15 QCoreApplication::notifyInternal2 (receiver=0x5625b2a4f500, event=0x5625b2a76b00) at /var/tmp/portage/dev-qt/qtcore-5.15.2-r2/work/qtbase-everywhere-src-5.15.2/src/corelib/kernel/qcoreapplication.cpp:1063
#16 0x00007f482cfc460d in QCoreApplicationPrivate::sendPostedEvents (receiver=0x0, event_type=0, data=0x5625b29be700) at /var/tmp/portage/dev-qt/qtcore-5.15.2-r2/work/qtbase-everywhere-src-5.15.2/src/corelib/kernel/qcoreapplication.cpp:1817
#17 0x00007f482d014583 in postEventSourceDispatch (s=0x5625b2a09430) at /var/tmp/portage/dev-qt/qtcore-5.15.2-r2/work/qtbase-everywhere-src-5.15.2/src/corelib/kernel/qeventdispatcher_glib.cpp:277
#18 0x00007f482bf1ee9b in g_main_context_dispatch () from /usr/lib64/libglib-2.0.so.0
#19 0x00007f482bf1f158 in ?? () from /usr/lib64/libglib-2.0.so.0
#20 0x00007f482bf1f20f in g_main_context_iteration () from /usr/lib64/libglib-2.0.so.0
#21 0x00007f482d014033 in QEventDispatcherGlib::processEvents (this=0x5625b2a05710, flags=...) at /var/tmp/portage/dev-qt/qtcore-5.15.2-r2/work/qtbase-everywhere-src-5.15.2/src/corelib/kernel/qeventdispatcher_glib.cpp:423
#22 0x00007f482cfbf98b in QEventLoop::exec (this=this@entry=0x7ffde132f970, flags=..., flags@entry=...) at /var/tmp/portage/dev-qt/qtcore-5.15.2-r2/work/qtbase-everywhere-src-5.15.2/include/QtCore/../../src/corelib/global/qflags.h:69
#23 0x00007f482dabb246 in FileNameSearchProtocol::searchDirectory(QUrl const&, std::function<bool (KFileItem const&)> const&, QSet<QString>&) (iteratedDirs=..., itemValidator=..., directory=..., this=0x7ffde1330020) at /usr/include/qt5/QtCore/qflags.h:121
#24 FileNameSearchProtocol::searchDirectory(QUrl const&, std::function<bool (KFileItem const&)> const&, QSet<QString>&) (this=0x7ffde1330020, directory=..., itemValidator=..., iteratedDirs=...) at /var/tmp/portage/kde-apps/kio-extras-20.12.3-r1/work/kio-extras-20.12.3/filenamesearch/kio_filenamesearch.cpp:100
#25 0x00007f482dabb52b in FileNameSearchProtocol::searchDirectory(QUrl const&, std::function<bool (KFileItem const&)> const&, QSet<QString>&) (iteratedDirs=..., itemValidator=..., directory=..., this=0x7ffde1330020) at /var/tmp/portage/kde-apps/kio-extras-20.12.3-r1/work/kio-extras-20.12.3/filenamesearch/kio_filenamesearch.cpp:151
#26 FileNameSearchProtocol::searchDirectory(QUrl const&, std::function<bool (KFileItem const&)> const&, QSet<QString>&) (this=0x7ffde1330020, directory=..., itemValidator=..., iteratedDirs=...) at /var/tmp/portage/kde-apps/kio-extras-20.12.3-r1/work/kio-extras-20.12.3/filenamesearch/kio_filenamesearch.cpp:100
#27 0x00007f482dabb52b in FileNameSearchProtocol::searchDirectory(QUrl const&, std::function<bool (KFileItem const&)> const&, QSet<QString>&) (iteratedDirs=..., itemValidator=..., directory=..., this=0x7ffde1330020) at /var/tmp/portage/kde-apps/kio-extras-20.12.3-r1/work/kio-extras-20.12.3/filenamesearch/kio_filenamesearch.cpp:151
#28 FileNameSearchProtocol::searchDirectory(QUrl const&, std::function<bool (KFileItem const&)> const&, QSet<QString>&) (this=0x7ffde1330020, directory=..., itemValidator=..., iteratedDirs=...) at /var/tmp/portage/kde-apps/kio-extras-20.12.3-r1/work/kio-extras-20.12.3/filenamesearch/kio_filenamesearch.cpp:100
#29 0x00007f482dabb52b in FileNameSearchProtocol::searchDirectory(QUrl const&, std::function<bool (KFileItem const&)> const&, QSet<QString>&) (iteratedDirs=..., itemValidator=..., directory=..., this=0x7ffde1330020) at /var/tmp/portage/kde-apps/kio-extras-20.12.3-r1/work/kio-extras-20.12.3/filenamesearch/kio_filenamesearch.cpp:151
#30 FileNameSearchProtocol::searchDirectory(QUrl const&, std::function<bool (KFileItem const&)> const&, QSet<QString>&) (this=0x7ffde1330020, directory=..., itemValidator=..., iteratedDirs=...) at /var/tmp/portage/kde-apps/kio-extras-20.12.3-r1/work/kio-extras-20.12.3/filenamesearch/kio_filenamesearch.cpp:100
#31 0x00007f482dabb52b in FileNameSearchProtocol::searchDirectory(QUrl const&, std::function<bool (KFileItem const&)> const&, QSet<QString>&) (iteratedDirs=..., itemValidator=..., directory=..., this=0x7ffde1330020) at /var/tmp/portage/kde-apps/kio-extras-20.12.3-r1/work/kio-extras-20.12.3/filenamesearch/kio_filenamesearch.cpp:151
#32 FileNameSearchProtocol::searchDirectory(QUrl const&, std::function<bool (KFileItem const&)> const&, QSet<QString>&) (this=0x7ffde1330020, directory=..., itemValidator=..., iteratedDirs=...) at /var/tmp/portage/kde-apps/kio-extras-20.12.3-r1/work/kio-extras-20.12.3/filenamesearch/kio_filenamesearch.cpp:100
#33 0x00007f482dabba7f in FileNameSearchProtocol::listDir (this=0x7ffde1330020, url=...) at /var/tmp/portage/kde-apps/kio-extras-20.12.3-r1/work/kio-extras-20.12.3/filenamesearch/kio_filenamesearch.cpp:95
#34 0x00007f4829a3c9a6 in KIO::SlaveBase::dispatch (this=0x7ffde1330020, command=71, data=...) at /var/tmp/portage/kde-frameworks/kio-5.83.0/work/kio-5.83.0/src/core/slavebase.cpp:1271
#35 0x00007f4829a3d4b6 in KIO::SlaveBase::dispatchLoop (this=0x7ffde1330020) at /var/tmp/portage/kde-frameworks/kio-5.83.0/work/kio-5.83.0/src/core/slavebase.cpp:335
#36 0x00007f482dabbda6 in kdemain (argc=<optimized out>, argv=0x5625b2a056e0) at /var/tmp/portage/kde-apps/kio-extras-20.12.3-r1/work/kio-extras-20.12.3/filenamesearch/kio_filenamesearch.cpp:203
#37 0x00005625b1b2b747 in launch (argc=argc@entry=4, _name=_name@entry=0x5625b2a05888 "/usr/lib64/qt5/plugins/kf5/kio/filenamesearch.so", args=0x5625b2a0592e "", args@entry=0x5625b2a058b9 "filenamesearch", cwd=cwd@entry=0x0, envc=envc@entry=0, envs=<optimized out>, envs@entry=0x5625b2a05936 "", reset_env=false, tty=0x0, avoid_loops=false, startup_id_str=0x5625b1b2f195 "0") at /var/tmp/portage/kde-frameworks/kinit-5.83.0/work/kinit-5.83.0/src/kdeinit/kinit.cpp:692
#38 0x00005625b1b2cdc9 in handle_launcher_request (sock=8, who=who@entry=0x5625b1b2f14a "launcher") at /var/tmp/portage/kde-frameworks/kinit-5.83.0/work/kinit-5.83.0/src/kdeinit/kinit.cpp:1130
#39 0x00005625b1b2d5f8 in handle_requests (waitForPid=waitForPid@entry=0) at /var/tmp/portage/kde-frameworks/kinit-5.83.0/work/kinit-5.83.0/src/kdeinit/kinit.cpp:1323
#40 0x00005625b1b28640 in main (argc=3, argv=0x7ffde13305e0) at /var/tmp/portage/kde-frameworks/kinit-5.83.0/work/kinit-5.83.0/src/kdeinit/kinit.cpp:1761
[Inferior 1 (process 26292) detached]
Comment 12 Ahmad Samir 2021-07-08 21:06:30 UTC
The backtrace from comment#11 looks like a different issue, bug 438187.
Comment 13 Ahmad Samir 2021-08-01 13:33:18 UTC
*** Bug 440454 has been marked as a duplicate of this bug. ***
Comment 14 Christian Bueno 2021-08-16 15:38:44 UTC
Created attachment 140773 [details]
error in dolphin
Comment 15 Christian Bueno 2021-08-16 15:44:11 UTC
Error after search in a NTF partition

1. open dolphin
2. got to the NTF partition
3. CTRL+F, and type a word
4. a error message is showed in dolphin 'The process for the filenamesearch protocol died unexpectedly.'
5. a kdeinit5 notification error is showed in the panel (bottom right).

Operating System: Kubuntu 21.04
KDE Plasma Version: 5.22.4
KDE Frameworks Version: 5.85.0
Qt Version: 5.15.2
Kernel Version: 5.11.0-25-generic (64-bit)
Graphics Platform: X11
Processors: 4 × Intel® Core™ i5-4430 CPU @ 3.00GHz
Memory: 15,4 GiB of RAM
Graphics Processor: GeForce GT 610/PCIe/SSE2

---

Details:
Executable: kdeinit5 PID: 4824 Signal: Aborted (6) Time: 16/8/21 10:22:18 -05

Application: kdeinit5 (kdeinit5), signal: Aborted

[KCrash Handler]
#4  __GI_raise (sig=sig@entry=6) at ../sysdeps/unix/sysv/linux/raise.c:49
#5  0x00007f22202be864 in __GI_abort () at abort.c:79
#6  0x00007f2220514c77 in QMessageLogger::fatal(char const*, ...) const () from /lib/x86_64-linux-gnu/libQt5Core.so.5
#7  0x00007f221fa57a86 in ?? () from /lib/x86_64-linux-gnu/libQt5Widgets.so.5
#8  0x00007f221fc745d3 in QDialog::QDialog(QWidget*, QFlags<Qt::WindowType>) () from /lib/x86_64-linux-gnu/libQt5Widgets.so.5
#9  0x00007f221b9681e3 in KMessageBox::messageBox(QWidget*, KMessageBox::DialogType, QString const&, QString const&, KGuiItem const&, KGuiItem const&, KGuiItem const&, QString const&, QFlags<KMessageBox::Option>) () from /lib/x86_64-linux-gnu/libKF5WidgetsAddons.so.5
#10 0x00007f221ba0da02 in ?? () from /lib/x86_64-linux-gnu/libKF5JobWidgets.so.5
#11 0x00007f222076a10c in QObject::event(QEvent*) () from /lib/x86_64-linux-gnu/libQt5Core.so.5
#12 0x00007f222073c78f in QCoreApplication::notifyInternal2(QObject*, QEvent*) () from /lib/x86_64-linux-gnu/libQt5Core.so.5
#13 0x00007f222073f7e1 in QCoreApplicationPrivate::sendPostedEvents(QObject*, int, QThreadData*) () from /lib/x86_64-linux-gnu/libQt5Core.so.5
#14 0x00007f2220796ba7 in ?? () from /lib/x86_64-linux-gnu/libQt5Core.so.5
#15 0x00007f221ee4e8eb in g_main_context_dispatch () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#16 0x00007f221eea1d28 in ?? () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#17 0x00007f221ee4c023 in g_main_context_iteration () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#18 0x00007f2220796204 in QEventDispatcherGlib::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) () from /lib/x86_64-linux-gnu/libQt5Core.so.5
#19 0x00007f222073b11b in QEventLoop::exec(QFlags<QEventLoop::ProcessEventsFlag>) () from /lib/x86_64-linux-gnu/libQt5Core.so.5
#20 0x00007f22212e9b66 in ?? () from /usr/lib/x86_64-linux-gnu/qt5/plugins/kf5/kio/filenamesearch.so
#21 0x00007f22212e9e4b in ?? () from /usr/lib/x86_64-linux-gnu/qt5/plugins/kf5/kio/filenamesearch.so
#22 0x00007f22212e9e4b in ?? () from /usr/lib/x86_64-linux-gnu/qt5/plugins/kf5/kio/filenamesearch.so
#23 0x00007f22212e9e4b in ?? () from /usr/lib/x86_64-linux-gnu/qt5/plugins/kf5/kio/filenamesearch.so
#24 0x00007f22212ea39a in ?? () from /usr/lib/x86_64-linux-gnu/qt5/plugins/kf5/kio/filenamesearch.so
#25 0x00007f221c7435d6 in KIO::SlaveBase::dispatch(int, QByteArray const&) () from /usr/lib/x86_64-linux-gnu/libKF5KIOCore.so.5
#26 0x00007f221c7440b6 in KIO::SlaveBase::dispatchLoop() () from /usr/lib/x86_64-linux-gnu/libKF5KIOCore.so.5
#27 0x00007f22212ea882 in kdemain () from /usr/lib/x86_64-linux-gnu/qt5/plugins/kf5/kio/filenamesearch.so
#28 0x000055b5b8b59926 in ?? ()
#29 0x000055b5b8b5b1d9 in ?? ()
#30 0x000055b5b8b5b9d7 in ?? ()
#31 0x000055b5b8b561ba in ?? ()
#32 0x00007f22202c0565 in __libc_start_main (main=0x55b5b8b55710, argc=3, argv=0x7ffdd38f5e48, init=<optimized out>, fini=<optimized out>, rtld_fini=<optimized out>, stack_end=0x7ffdd38f5e38) at ../csu/libc-start.c:332
#33 0x000055b5b8b56cbe in ?? ()
[Inferior 1 (process 4824) detached]
Comment 16 Nate Graham 2021-08-31 16:59:45 UTC
*** Bug 441787 has been marked as a duplicate of this bug. ***
Comment 17 Nate Graham 2021-10-06 19:41:56 UTC
*** Bug 443367 has been marked as a duplicate of this bug. ***