[KCoreDirLister] Guard uiDelegate(), it might be null

BUG: 437153